feat: search controller

--- a/src/views/moviesList.ejs
+++ b/src/views/moviesList.ejs
@@ -16,32 +16,14 @@
                         <li class="breadcrumb-item"><a href="/">Inicio</a></li>
                         <li class="breadcrumb-item active" aria-current="page">Películas</li>
                     </ol>
+                    <div class="buscar-titulo">
+                        <form action="/movies/search" method="POST" class="d-flex">
+                            <input type="text" name="titulo" id="titulo">
+                            <button class="btn btn-outline-dark" type="submit"><i class="fas fa-search"></i></button>
+                        </form>
+                    </div>
                 </nav>
-                <div class="pagination">
-                        <ul class="pagination">
-                          <li class="page-item">
-                            <a class="page-link" href="<%= paginate.href(true).prev %>" aria-label="Previous">
-                              <span aria-hidden="true">&laquo;</span>
-                            </a>
-                          </li>
-                          
-                        <% if (pages) { %>
-                            <% pages.forEach(page => { %>
-                                <li class="page-number">
-                                    <a href="<%= page.url %>" class="page-link <%= page.number === currentPage && "active" %>"><%= page.number %></a>
-                                </li>
-                            <% }) %>
-                        <% } %>
-
-                         
-                          <li class="page-item">
-                            <a class="page-link" href="<%= paginate.href(true).prev %>" aria-label="Next">
-                              <span aria-hidden="true">&raquo;</span>
-                            </a>
-                          </li>
-                        </ul>
-                </div>
-                  <a href="/movies/add" class="btn btn-dark btn-sm">Agregar película</a>
+                <a href="/movies/add" class="btn btn-dark btn-sm">Agregar película</a>
             </div>
 
             <div class="card-body">
@@ -186,7 +168,39 @@
                                 </td>
                             </tr>
                             <% }) %>
-                    </tbody>
+                        </tbody>
+                        <div class="pagination">
+                    
+                            <ul class="pagination">
+                                    <% if (paginate.hasPreviousPages || paginate.hasNextPages(pagesCount)) { %>
+                                        <% if (paginate.hasPreviousPages) { %>
+                                        <li class="page-item">
+                                            <a class="page-link" href="<%= paginate.href(true).prev %>" aria-label="Previous">
+                                              <span aria-hidden="true">&laquo;</span>
+                                            </a>
+                                          </li>
+                                    <% } %>
+                                    
+                                <% if (pages) { %>
+                                    <% pages.forEach(page => { %>
+                                        <li class="page-number">
+                                            <a href="<%= page.url %>" class="page-link <%= page.number === currentPage && "active" %>"><%= page.number %></a>
+                                        </li>
+                                    <% }) %>
+                                <% } %>
+                    
+                                <% if (paginate.hasNextPages(pagesCount)) { %>
+                                    <li class="page-item">
+                                        <a class="page-link" href="<%= paginate.href() %>" aria-label="Next">
+                                          <span aria-hidden="true">&raquo;</span>
+                                        </a>
+                                    </li>
+                                <% } %>
+                    
+                                <% } %>
+                                 
+                                </ul>
+                        </div>
                 </table>
             </div>
         </div>
