--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -3,7 +3,7 @@
     <div class="container-fluid">
       <a href="/">
         <figure>
-          <!-- <img src="/img/logo-DH.png" alt="Logo DH"> -->
+          <img src="/img/logo-DH.png" alt="Logo DH">
         </figure>
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
